--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.0.0-alpha.0",
+    "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "redux-persist": "^6.0.0"
