Installed stylis for RTL support

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "stylis": "^4.2.0",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
