--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "framer-motion": "^10.12.16",
+    "libphonenumber-js": "^1.10.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-imask": "^7.0.0-alpha.0",
