--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.11.2",
     "redux-persist": "^6.0.0",
     "stylis": "^4.2.0",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "workbox": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -40,6 +41,9 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-pwa": "^0.16.4",
+    "workbox-cdn": "^5.1.4",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
