--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-phone-number-input": "^3.2.23",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "stylis": "^4.2.0",
     "stylis-plugin-rtl": "^2.1.1",
